{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 51,
  "lineage": "236da99c-148a-6f6d-8c88-91a683198aff",
  "resources": [
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "revving",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:128809796679:instance/i-06ef83814ee9ecdd1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ef83814ee9ecdd1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Adarsh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f46898a2ca4954e5",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_ip": "10.0.1.216",
            "public_dns": "ec2-107-22-163-176.compute-1.amazonaws.com",
            "public_ip": "107.22.163.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01b69ee7b7dabb371",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ecdd598bef5fdea6",
            "tags": {
              "Environment": "devlopment",
              "Name": "dev"
            },
            "tags_all": {
              "Environment": "devlopment",
              "Name": "dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-035e396ec9b1a3059"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.security.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ongraph_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128809796679:internet-gateway/igw-04238146426c11ecb",
            "id": "igw-04238146426c11ecb",
            "owner_id": "128809796679",
            "tags": {
              "Name": "OnGraph-IGW"
            },
            "tags_all": {
              "Name": "OnGraph-IGW"
            },
            "vpc_id": "vpc-067431c275d76ebf0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04238146426c11ecb",
            "id": "r-rtb-091382071a976d3e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-091382071a976d3e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.vpc_network",
            "module.network.aws_internet_gateway.ongraph_igw"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128809796679:route-table/rtb-0fa5d7ee3946a0715",
            "id": "rtb-0fa5d7ee3946a0715",
            "owner_id": "128809796679",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "devlopment",
              "Name": "devlopment-private-route-table"
            },
            "tags_all": {
              "Environment": "devlopment",
              "Name": "devlopment-private-route-table"
            },
            "vpc_id": "vpc-067431c275d76ebf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128809796679:route-table/rtb-091382071a976d3e3",
            "id": "rtb-091382071a976d3e3",
            "owner_id": "128809796679",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04238146426c11ecb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "devlopment",
              "Name": "devlopment-public-route-table"
            },
            "tags_all": {
              "Environment": "devlopment",
              "Name": "devlopment-public-route-table"
            },
            "vpc_id": "vpc-067431c275d76ebf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e583da873edae51",
            "route_table_id": "rtb-0fa5d7ee3946a0715",
            "subnet_id": "subnet-0973813ceaa17634a"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0594333e515b52cc5",
            "route_table_id": "rtb-0fa5d7ee3946a0715",
            "subnet_id": "subnet-09cad0a9ff469c01b"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010fed5b80185dcce",
            "route_table_id": "rtb-091382071a976d3e3",
            "subnet_id": "subnet-0ecdd598bef5fdea6"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a344b495eb7a5ec8",
            "route_table_id": "rtb-091382071a976d3e3",
            "subnet_id": "subnet-0c5e2717b40c1923f"
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_network",
            "module.network.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128809796679:subnet/subnet-0973813ceaa17634a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0973813ceaa17634a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "128809796679",
            "tags": {
              "Environment": "devlopment",
              "Name": "devlopment-us-east-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "devlopment",
              "Name": "devlopment-us-east-1a-private-subnet"
            },
            "vpc_id": "vpc-067431c275d76ebf0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128809796679:subnet/subnet-09cad0a9ff469c01b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-09cad0a9ff469c01b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "128809796679",
            "tags": {
              "Environment": "devlopment",
              "Name": "devlopment-us-east-1b-private-subnet"
            },
            "tags_all": {
              "Environment": "devlopment",
              "Name": "devlopment-us-east-1b-private-subnet"
            },
            "vpc_id": "vpc-067431c275d76ebf0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128809796679:subnet/subnet-0ecdd598bef5fdea6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ecdd598bef5fdea6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128809796679",
            "tags": {
              "Environment": "devlopment",
              "Name": "devlopment-us-east-1a-      public-subnet"
            },
            "tags_all": {
              "Environment": "devlopment",
              "Name": "devlopment-us-east-1a-      public-subnet"
            },
            "vpc_id": "vpc-067431c275d76ebf0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128809796679:subnet/subnet-0c5e2717b40c1923f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c5e2717b40c1923f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128809796679",
            "tags": {
              "Environment": "devlopment",
              "Name": "devlopment-us-east-1b-      public-subnet"
            },
            "tags_all": {
              "Environment": "devlopment",
              "Name": "devlopment-us-east-1b-      public-subnet"
            },
            "vpc_id": "vpc-067431c275d76ebf0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128809796679:vpc/vpc-067431c275d76ebf0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a36732a61fb92722",
            "default_route_table_id": "rtb-0154242af91d54d0c",
            "default_security_group_id": "sg-050fcf63a2196ecc7",
            "dhcp_options_id": "dopt-5d1a9527",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-067431c275d76ebf0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0154242af91d54d0c",
            "owner_id": "128809796679",
            "tags": {
              "Environment": "devlopment",
              "Name": "OnGraph-VPC"
            },
            "tags_all": {
              "Environment": "devlopment",
              "Name": "OnGraph-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128809796679:security-group/sg-035e396ec9b1a3059",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-035e396ec9b1a3059",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "devlopment-default-sg",
            "name_prefix": "",
            "owner_id": "128809796679",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "devlopment"
            },
            "tags_all": {
              "Environment": "devlopment"
            },
            "timeouts": null,
            "vpc_id": "vpc-067431c275d76ebf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_network"
          ]
        }
      ]
    }
  ]
}